--- a/styles.css
+++ b/styles.css
@@ -11,408 +11,360 @@ html {
 body {
   height: 100vh;
   width: 100vw;
-  font-family: "Work Sans", sans-serif;
-}
-
-img {
-  width: 55%;
-  height: 90%;
-  padding: 2rem;
-  border-radius: 10px;
+  overflow-x: hidden;
 }
 
 header {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 10vh;
+  height: 6vh;
   position: fixed;
+  top: 0;
   width: 100%;
-  left: 0;
-  z-index: 1;
-  background: white;
-}
-
-section {
-  height: auto;
-  width: 100%;
-}
-
-footer {
-  height: fit-content;
-  height: 100vh;
-  display: flex;
-  flex-flow: column;
-  justify-content: center;
-  align-items: center;
-  background: whitesmoke;
-}
-
-a {
-  color: black;
-  text-transform: uppercase;
-  font-size: 25px;
-  text-decoration: none;
-}
-
-a:hover {
   background: black;
-  color: white;
+}
+
+ul {
+  display: flex;
+  list-style: none;
 }
 
 li {
+  padding: 0 1rem;
+  font-size: 1.5rem;
+}
+
+a {
   text-decoration: none;
+  color: rgb(0, 0, 0);
+  font-size: 1.5rem;
+  transition: 0.3s ease;
+  color: white;
+}
+
+a:hover {
+  background: orangered;
+  color: white;
+  padding: 10px;
+  font-size: 1.6rem;
+  transition: 0.3s ease-in-out;
+}
+
+section {
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.headline {
+  justify-content: space-around;
+  height: 90vh;
+  background: whitesmoke;
+}
+
+.headline-info > h1 {
+  font-size: 7rem;
+  background: black;
+  padding: 2rem;
+  color: white;
+}
+
+.headline-info > p {
+  font-size: 2rem;
+  font-style: italic;
+}
+
+.headline > img {
+  width: 50%;
+  height: fit-content;
+  padding: 20px;
+  object-fit: contain;
+}
+
+.story {
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+  height: 100%;
+  background: white;
+}
+
+.story > h1 {
+  font-size: 2.5rem;
+  padding: 30px;
+  text-align: center;
+}
+
+.story > p {
+  padding: 2rem;
+  text-align: left;
+  font-size: 20px;
+  line-height: 30px;
+}
+
+.story-illustration {
+  height: 100%;
+  width: 50%;
+  background: black;
+  object-fit: contain;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: -9999;
 }
 
 form {
-  text-align: center;
-  display: flex;
-  flex-flow: column;
-  justify-content: center;
-  align-items: center;
-  border-radius: 20px;
-  text-transform: uppercase;
-}
-
-input[type="text"] {
-  height: 50px;
-  width: 80vw;
-  margin: 1rem;
-  padding: 10px;
-  border-radius: 10px;
-  border: none;
-  background: whitesmoke;
-}
-input[type="text"]:hover {
-  background: black;
-  color: white;
-}
-
-input[type="email"] {
-  height: 50px;
-  width: 80vw;
-  margin: 1rem;
-  padding: 10px;
-  border-radius: 10px;
-  border: none;
-  background: whitesmoke;
-}
-input[type="email"]:hover {
-  background: black;
-  color: white;
-}
-
-input[type="submit"] {
-  height: 3rem;
-  width: 80vw;
-  border: none;
-  border-radius: 10px;
-  cursor: pointer;
-  transition: 0.5s;
-}
-input[type="submit"]:hover {
-  background: black;
-  color: white;
-}
-
-#introduction {
-  height: 90vh;
-  width: 100%;
-
   display: flex;
   justify-content: center;
   align-items: center;
-  letter-spacing: 3px;
-  line-height: 60px;
+  height: inherit;
 }
 
-.introduction-info {
-  display: flex;
-  flex-flow: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  width: 50vw;
-  height: 80%;
-  margin-top: 50px;
-  font-size: 110%;
-  border-top: 1px solid orangered;
-  border-bottom: 1px solid orangered;
-}
-
-.lg {
-  color: rgb(255, 55, 0);
-  text-align: center;
-  padding: 20px;
-  font-size: 2rem;
-  border: 1px solid black;
-  background: black;
-  margin: 50px;
-  opacity: 0.7;
-}
-
-.md {
-  font-size: 4rem;
-  text-align: right;
-  margin-right: 20px;
-  line-height: 45px;
-}
-
-.md-2 {
-  font-size: 1.8rem;
-  margin-left: 4rem;
-  border-left: 10px solid orangered;
-}
-
-.about {
-  color: black;
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  height: 100vh;
-  width: 100%;
-  padding: 3rem;
-}
-
-.about-title {
-  font-size: 6rem;
-}
-
-.avatar {
-  width: 500px;
-  height: 500px;
-  border-radius: 100%;
-  object-fit: cover;
-  border: 5px solid orangered;
-}
-
-.menu {
-  list-style: none;
-  display: flex;
-}
-
-.menu-item {
-  padding: 30px;
-}
+/* img {
+  width: 30rem;
+  height: 30rem;
+} */
 
 .projects {
-  padding: 10px;
+  display: flex;
+  flex-flow: column;
+  height: auto;
+  width: 100vw;
 }
 
-.projects > h1 {
-  font-size: 3rem;
+.projects-heading {
+  font-size: 4rem;
+  padding: 10rem;
+}
+
+.title {
   text-align: center;
-}
-
-.project-1 {
-  display: flex;
-  height: 100vh;
-}
-
-.project-2 {
-  display: flex;
-  flex-flow: row-reverse;
-  height: 100vh;
-}
-.project-3 {
-  display: flex;
-  height: 100vh;
-  margin-bottom: 20px;
+  padding: 30px;
+  text-transform: uppercase;
 }
 
 .info {
+  padding: 0 30px 30px 30px;
+  line-height: 25px;
+  letter-spacing: 1px;
+}
+
+.proj-1,
+.proj-2,
+.proj-3 {
   display: flex;
-  flex-flow: column;
   justify-content: center;
   align-items: center;
-  text-align: center;
-  line-height: 1.7rem;
-}
-
-.info-title {
-  color: grey;
-  font-size: 2rem;
-  text-transform: uppercase;
-}
-
-.info-para {
-  color: grey;
-  font-size: 1.1rem;
-  text-align: justify;
-  padding: 2rem;
+  height: fit-content;
   width: 100%;
+  height: 33vh;
+  padding: 10px;
 }
 
-.btns-container {
-  width: 100%;
-  display: flex;
-  justify-content: space-around;
+.proj-1 > img,
+.proj-2 > img,
+.proj-3 > img {
+  width: 50%;
+  height: 100%;
 }
 
-input[type="text"] {
-  border: 1px solid black;
-  background: white;
-}
-input[type="email"] {
-  border: 1px solid black;
-  background: white;
+.proj-1 {
+  background: whitesmoke;
 }
 
-button {
-  height: 30px;
-  width: fit-content;
-  padding: 20px;
+.proj-2 {
+  flex-flow: row-reverse;
   background: black;
   color: white;
-  border-radius: 50px;
-  border: none;
+  font-size: 18px;
+}
+
+.proj-1-info,
+.proj-2-info,
+.proj-3-info {
+  padding: 30px;
+  text-align: justify;
+  width: 50%;
+  text-align: center;
+  padding-bottom: 4rem;
+}
+
+.btn-container {
   display: flex;
+  justify-content: space-around;
   align-items: center;
-  font-size: 0.8rem;
-  text-transform: uppercase;
-  transition: all 0.4s ease-in-out;
+  margin: 0 auto;
+  border-radius: 50px;
+  height: auto;
+  width: 80%;
+}
+
+.btn-container > button {
+  font-size: 17px;
+  height: 30px;
+  width: 150px;
+  border-radius: 100px;
+  border: none;
+}
+
+.btn-container > button:hover {
+  background: black;
+  color: white;
+}
+
+form {
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  justify-content: center;
+  width: 50%;
+}
+
+input {
+  width: 100%;
+  height: 50px;
+  margin: 10px;
+}
+
+button[type="submit"] {
+  width: 100%;
+  height: 40px;
+  margin-top: 10px;
+  font-size: 20px;
+  border-radius: 100px;
 }
 
 button:hover {
-  background: white;
-  color: black;
-  box-shadow: 0 3px 2px black;
-  transition: all 0.4s ease-in-out;
+  color: white;
+  background: black;
 }
 
-.email,
-.github,
-.linkedin {
-  height: 100px;
-  width: 100px;
+.form-heading {
+  font-size: 3rem;
 }
-@media screen and (max-width: 1100px) {
-  .avatar {
-    display: none;
-    object-fit: cover;
+
+input:hover {
+  background: rgb(225, 223, 223);
+  border-radius: 2px;
+}
+
+.contact {
+  background: whitesmoke;
+  height: 100vh;
+}
+
+@media screen and (max-width: 900px) {
+  .headline {
+    background: black;
+    padding: 50px;
+    color: white;
+    height: 70vh;
+    margin: 0 auto;
   }
-  .about-title {
+
+  .headline-img {
+    display: none;
+  }
+
+  .headline-info > p {
     text-align: center;
-    width: 90vw;
-    display: none;
-  }
-
-  .introduction-info {
-    width: 70vw;
   }
 
   .story {
-    height: fit-content;
-    width: 90vw;
-    text-align: center;
-    margin-top: 20px;
-  }
-  .about {
-    display: none;
-  }
-  img {
-    width: 50%;
-    height: 50%;
-  }
-
-  .projects {
-    padding-top: 100px;
-  }
-  .project-1 {
-    height: 100%;
-  }
-  .project-2 {
-    height: 100%;
-    padding-bottom: 30px;
-  }
-  .project-3 {
-    height: 100%;
-  }
-  footer {
-    background: whitesmoke;
-  }
-  input[type="text"] {
-    border: 1px solid black;
-    background: white;
-  }
-  input[type="email"] {
-    border: 1px solid black;
-    background: white;
-  }
-}
-@media screen and (max-width: 700px) {
-  .introduction-info {
-    display: flex;
-    flex-flow: column;
-    justify-content: space-evenly;
-    align-items: center;
-    height: fit-content;
-  }
-
-  .project-1,
-  .project-2,
-  .project-3 {
-    margin-bottom: 50px;
-    display: flex;
-    flex-flow: column;
-    text-align: center;
-    align-items: center;
-  }
-  .story {
-    min-width: 300px;
-  }
-
-  .project-2 {
-    background: whitesmoke;
-  }
-
-  .about {
-    display: none;
-  }
-  .about-title {
-    font-size: 3rem;
-    display: none;
-  }
-  .hide {
-    display: block;
-  }
-  .avatar {
-    display: block;
-  }
-  img {
+    height: 100px;
+    line-height: 30px;
     width: 100%;
-    height: 100%;
   }
-
-  a {
-    font-size: 15px;
-    transition: all 0.3s ease-in-out;
+  .story-illustration {
+    display: none;
   }
-
-  a:hover {
-    text-decoration: overline;
-    color: rgb(123, 117, 117);
-    font-size: 16px;
-  }
-
-  header {
+  .proj-1,
+  .proj-2,
+  .proj-3 {
     display: flex;
+    flex-flow: column;
     justify-content: center;
     align-items: center;
-    height: fit-content;
-    padding: 10px;
+    height: 100%;
+  }
+  .proj-2 {
+    background: white;
+    color: black;
+  }
+  .proj-1 > img,
+  .proj-2 > img,
+  .proj-3 > img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
   }
 
-  footer {
+  .btn-container {
+    display: flex;
+    flex-flow: column;
+  }
+  button {
+    margin-bottom: 10px;
+  }
+  button[type="submit"] {
+    border: none;
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .headline {
     background: whitesmoke;
-    height: 100vh;
+    color: black;
+    width: 100%;
+    height: 90vh;
+    margin: 0 auto;
+    padding-top: 5rem;
+    text-align: center;
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    align-items: center;
   }
-  input[type="text"] {
-    border: 1px solid black;
-    height: 40px;
+
+  .headline-info > h1 {
+    font-size: 45px;
   }
-  input[type="email"] {
-    border: 1px solid black;
-    height: 40px;
+
+  .headline-info > img {
+    z-index: -999;
+  }
+  .story > p {
+    font-size: 20px;
+  }
+  .story > h1 {
+    margin-top: 10rem;
+  }
+  .about {
+    height: 90vh;
+    padding-bottom: 10rem;
+  }
+  .projects {
+    height: auto;
+  }
+  .btn-container {
+    display: flex;
+    flex-flow: column;
+  }
+  .btn-container > button {
+    margin: 5px;
+    border: none;
+  }
+  .proj-1-info,
+  .proj-2-info,
+  .proj-3-info {
+    width: 100%;
+  }
+  form {
+    width: 80%;
   }
 }
