--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,6 @@ header {
   position: fixed;
   top: 0;
   width: 100%;
-  background: black;
 }
 
 ul {
@@ -40,11 +39,9 @@ a {
   color: rgb(0, 0, 0);
   font-size: 1.5rem;
   transition: 0.3s ease;
-  color: white;
 }
 
 a:hover {
-  background: orangered;
   color: white;
   padding: 10px;
   font-size: 1.6rem;
@@ -317,11 +314,18 @@ input:hover {
 }
 
 @media screen and (max-width: 650px) {
+  header {
+    background: white;
+  }
+
+  a:hover {
+    color: black;
+  }
   .headline {
     background: whitesmoke;
     color: black;
     width: 100%;
-    height: 90vh;
+    height: 50vh;
     margin: 0 auto;
     padding-top: 5rem;
     text-align: center;
@@ -332,7 +336,9 @@ input:hover {
   }
 
   .headline-info > h1 {
-    font-size: 45px;
+    font-size: 100px;
+    background: none;
+    color: black;
   }
 
   .headline-info > img {
@@ -340,16 +346,17 @@ input:hover {
   }
   .story > p {
     font-size: 20px;
+    padding-bottom: 20rem;
   }
   .story > h1 {
-    margin-top: 10rem;
+    margin-top: 20rem;
   }
   .about {
-    height: 90vh;
-    padding-bottom: 10rem;
+    height: 100vh;
   }
   .projects {
     height: auto;
+    padding-top: 5rem;
   }
   .btn-container {
     display: flex;
