--- a/styles.css
+++ b/styles.css
@@ -43,8 +43,7 @@ a {
 }
 
 a:hover {
-  color: white;
-  padding: 10px;
+  padding: 12px;
   font-size: 1.6rem;
   transition: 0.3s ease-in-out;
 }
@@ -88,7 +87,6 @@ section {
   align-items: center;
   width: 50%;
   height: 100%;
-
   background: white;
 }
 
@@ -107,7 +105,6 @@ section {
 .story-illustration {
   height: 100%;
   width: 50%;
-  background: orangered;
   object-fit: contain;
   display: flex;
   justify-content: center;
@@ -147,8 +144,7 @@ form {
 
 .info {
   padding: 0 30px 30px 30px;
-  line-height: 25px;
-  letter-spacing: 1px;
+  font-size: 1.3rem;
 }
 
 .proj-1,
@@ -160,7 +156,7 @@ form {
   height: fit-content;
   width: 100%;
   height: 50vh;
-  padding: 10px;
+  padding: 5px;
 }
 
 .proj-1 > img,
@@ -176,8 +172,7 @@ form {
 
 .proj-2 {
   flex-flow: row-reverse;
-  background: black;
-  color: white;
+
   font-size: 18px;
 }
 
@@ -186,7 +181,7 @@ form {
 .proj-3-info {
   padding: 30px;
   text-align: justify;
-  width: 50%;
+  width: 75%;
   text-align: center;
   padding-bottom: 4rem;
 }
@@ -201,18 +196,26 @@ form {
   width: 80%;
 }
 
+.btn-container > button:hover {
+  background: black;
+  height: 50px;
+  width: 160px;
+  font-size: 15px;
+}
+
 .btn-container > button {
-  font-size: 17px;
-  height: 30px;
+ 
+  font-size: 15px;
+  height: 50px;
   width: 150px;
   border-radius: 100px;
   border: none;
 }
 
-.btn-container > button:hover {
+/* .btn-container > button:hover {
   background: black;
   color: white;
-}
+} */
 
 form {
   display: flex;
@@ -254,8 +257,8 @@ input:hover {
 }
 
 .contact {
-  background: black;
-  color: whitesmoke;
+  background: whitesmoke;
+  color: black;
   height: 90vh;
 }
 
@@ -293,10 +296,10 @@ input:hover {
     align-items: center;
     height: 100%;
   }
-  .proj-2 {
+  /* .proj-2 {
     background: white;
     color: black;
-  }
+  } */
   .proj-1 > img,
   .proj-2 > img,
   .proj-3 > img {
@@ -322,9 +325,9 @@ input:hover {
     background: white;
   }
 
-  a:hover {
+  /* a:hover {
     color: black;
-  }
+  } */
   .headline {
     background: whitesmoke;
     color: black;
@@ -370,6 +373,7 @@ input:hover {
     margin: 5px;
     border: none;
   }
+
   .proj-1-info,
   .proj-2-info,
   .proj-3-info {
